// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Snapshots No props 1`] = `
<div
  className="sc-bdfBwQ kiaVAh"
>
  <div
    className="sc-gsTCUz igNSYY"
    spacing="tiny"
  >
    <p>
      Body
    </p>
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Alert Snapshots Spacing 1`] = `
<div
  className="sc-bdfBwQ kiaVAh"
>
  <div
    className="sc-gsTCUz beIjAc"
    spacing="huge"
  >
    <p>
      Body
    </p>
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Alert Snapshots invalid spacing 1`] = `
<div
  className="sc-bdfBwQ kiaVAh"
>
  <div
    className="sc-gsTCUz jOJURE"
    spacing={10}
  />
</div>
`;

exports[`Alert Snapshots no children 1`] = `
<div
  className="sc-bdfBwQ kiaVAh"
>
  <div
    className="sc-gsTCUz igNSYY"
    spacing="tiny"
  />
</div>
`;
